# chess

./: README.md  constants.py  main.py  notes.txt  pyproject.toml  requirements.txt  test.py  test2.py
assets/: assets.py
chessbot/: __init__.py  chessbot.py  scoring.py
game/: board.py  game.py
game/pieces/: __init__.py  bishop.py  centaur.py  cursed_pawn.py  jester.py  joker.py  king.py  pawn.py  piece.py  rook.py
game/pieces/mods/: centaur.py  jester.py
game/players/: __init__.py  bot.py  human.py  player.py
minimax/: __init__.py  algorithm.py  moves.py  scoring.py
src/main/: assets.py  constants.py
src/main/chessbot/: moves.py
src/main/game/: board.py  game.py
src/main/game/pieces/: __init__.py  knight.py  pawn.py  piece.py  queen.py  rook.py
src/main/game/pieces/mods/: __init__.py  cursed_pawn.py
src/main/windowgui/: __init__.py  constants.py  util.py
windowgui/: flash.py  ui.py  window.py
